<resources>
    <string name="app_name"> FollowMe </string>

    <string name="kakaoLogin"> KakaoLogin </string>
    <string name="GoogleLogin"> GoogleLogin </string>

    <string name="webClientId"> 776783503426-eluted78toe100ld751ipe5luc68huuqf.apps.googleusercontent.com </string>

    <string name="Kakao_Tag"> Kakao_Log </string>
    <string name="Google_Tag"> Google_Log </string>

    <string name="login_Name">따라와</string>

    <string name="daily_theme">뽑아 보자</string>
    <string name="myInfo_theme">모아 보자</string>
    <string name="search_theme">찾아 보자</string>

    <string name="gameView">gameView</string>
    <string name="leaf_button">leaf Button</string>

    <string name="theme_info">테마 여행 정보 생성</string>
    <string name="theme_img">themeImg</string>
    <string name="weatherImg">weatherImg</string>
    <string name="airImg">airImg</string>
    <string name="close_popup_page">closePopupPage</string>
    <string name="divide_the_section">divide the section</string>
    <string name="jeju_travel_info">제주 관광 정보</string>
    <string name="app_icon">App Icon</string>
    <string name="themePark">관광지</string>
    <string name="restaurant">식당</string>
    <string name="hotel">숙박</string>
    <string name="visit_jeju_items">visit Jeju Items</string>
    <string name="contents_image">Contents Image</string>
    <string name="item_button">Item Button</string>
    <string name="profile_img_view">Profile Img View</string>
    <string name="choose_theme">오늘의 테마 여행을 뽑아 보세요</string>

</resources>