<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SearchActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_theme"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="24sp"
            android:paddingVertical="10dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/search_theme"
            app:layout_constraintTop_toTopOf="parent">
        </TextView>

        <SearchView
            android:id="@+id/searchBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:iconifiedByDefault="false"
            android:searchIcon="@drawable/search_icon"
            android:background="@drawable/search_bar_round">
        </SearchView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="0dp"
            android:layout_marginHorizontal="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <Button
                android:id="@+id/searchThemeBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/themePark"
                android:textStyle="bold"
                android:background="@drawable/search_leftbtn_round"
                tools:ignore="ButtonStyle">
            </Button>

            <Button
                android:id="@+id/searchRestaurantBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/restaurant"
                android:textStyle="bold"
                android:background="@drawable/search_centerbtn_round"
                tools:ignore="ButtonStyle">
            </Button>

            <Button
                android:id="@+id/searchHotelBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hotel"
                android:textStyle="bold"
                android:background="@drawable/search_rightbtn_round"
                tools:ignore="ButtonStyle">
            </Button>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/searchRecycle"
            android:layout_width="match_parent"
            android:layout_height="580dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="5dp"
            android:paddingVertical="10dp"
            android:paddingHorizontal="5dp"
            android:background="@drawable/search_scroll_view_round"
            android:contentDescription="@string/visit_jeju_items">
        </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="5"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/searchTravel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:layout_weight="1"
            android:padding="5dp"
            android:text="@string/search_theme"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="VisualLintButtonSize,DuplicateSpeakableTextCheck">
        </Button>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1">
        </View>

        <Button
            android:id="@+id/themeTravel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/daily_theme"
            android:textSize="14sp"
            android:textStyle="bold"
            android:padding="5dp"
            android:layout_marginVertical="5dp"
            tools:ignore="VisualLintButtonSize">
        </Button>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1">
        </View>

        <Button
            android:id="@+id/myInfoTravel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/myInfo_theme"
            android:textSize="14sp"
            android:textStyle="bold"
            android:padding="5dp"
            android:layout_marginVertical="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="VisualLintButtonSize">
        </Button>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>