<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MyInfoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/myInfo_theme"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="24sp"
            android:paddingVertical="10dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/myInfo_theme"
            app:layout_constraintTop_toTopOf="parent">
        </TextView>

        <LinearLayout
            android:id="@+id/profileLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:padding="5dp"
            android:background="@drawable/info_view_round"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/profileImg"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="10dp"
                android:background="@drawable/profile_img_round"
                android:contentDescription="@string/profile_img_view">
            </ImageView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="2">

                <TextView
                    android:id="@+id/profileNickname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:layout_marginVertical="5dp"
                    android:paddingHorizontal="10dp"
                    android:layout_weight="1"

                    android:textSize="15sp"
                    android:gravity="start|center"
                    android:background="@drawable/info_item_round">
                </TextView>

                <TextView
                    android:id="@+id/profileEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:layout_marginVertical="5dp"
                    android:paddingHorizontal="10dp"
                    android:layout_weight="1"

                    android:textSize="15sp"
                    android:gravity="start|center"
                    android:background="@drawable/info_item_round">
                </TextView>

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/view_round">
        </View>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/infoFavorite"
            android:layout_width="match_parent"
            android:layout_height="530dp"
            android:layout_marginHorizontal="10dp"
            android:paddingVertical="10dp"
            android:paddingHorizontal="5dp"
            android:background="@drawable/info_view_round">
        </androidx.recyclerview.widget.RecyclerView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5"
            android:layout_marginHorizontal="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <Button
                android:id="@+id/searchTravel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/search_theme"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="VisualLintButtonSize,DuplicateSpeakableTextCheck">
            </Button>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1">
            </View>

            <Button
                android:id="@+id/themeTravel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/daily_theme"
                android:textSize="14sp"
                android:textStyle="bold"
                android:padding="5dp"
                android:layout_marginVertical="5dp"
                tools:ignore="VisualLintButtonSize">
            </Button>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1">
            </View>

            <Button
                android:id="@+id/myInfoTravel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/myInfo_theme"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="VisualLintButtonSize,DuplicateSpeakableTextCheck">
            </Button>

        </LinearLayout>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>